// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render the Figure component 1`] = `
<div>
  <figure
    class="nhsuk-image"
  >
    <img
      alt="Lots of sore red patches with small blisters spread across white skin on a woman's chest."
      class="nhsuk-image__img"
      src="https://assets.nhs.uk/prod/images/S_0318_Bullous_pemphigoid_lesions_.2e16d0ba.fill-320x213.jpg"
    />
    <figcaption
      class="nhsuk-image__caption"
    >
      It can affect large areas of the body or limbs.
    </figcaption>
  </figure>
</div>
`;

exports[`should render the Figure component without caption 1`] = `
<div>
  <figure
    class="nhsuk-image"
  >
    <img
      alt="Lots of sore red patches with small blisters spread across
        white skin on a woman's chest."
      class="nhsuk-image__img"
      src="https://assets.nhs.uk/prod/images/S_0318_Bullous_pemphigoid_lesions_.2e16d0ba.fill-320x213.jpg"
    />
  </figure>
</div>
`;
